web-infras/parser/tests/fixtures/babel/es2015/class-methods/disallow-duplicate-method-params/output.txt
[SyntaxError]: duplicate params (2,12)
2|    bar(a, a) {}
 |          ^
